@@ -25,20 +25,17 @@ import android.content.Context;
 import android.database.Cursor;
 import android.net.Uri;
 
-import com.annimon.stream.Stream;
-
 import net.zetetic.database.sqlcipher.SQLiteDatabase;
 
 import org.json.JSONArray;
 import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
 import org.session.libsession.messaging.sending_receiving.notifications.MessageNotifier;
-import org.session.libsession.snode.SnodeAPI;
+import org.session.libsession.network.SnodeClock;
 import org.session.libsession.utilities.Address;
 import org.session.libsession.utilities.AddressKt;
 import org.session.libsession.utilities.ConfigFactoryProtocol;
 import org.session.libsession.utilities.ConfigFactoryProtocolKt;
-import org.session.libsession.utilities.DistributionTypes;
 import org.session.libsession.utilities.GroupUtil;
 import org.session.libsession.utilities.TextSecurePreferences;
 import org.session.libsession.utilities.Util;
@@ -56,18 +53,20 @@ import org.thoughtcrime.securesms.database.model.content.MessageContent;
 import org.thoughtcrime.securesms.dependencies.OnAppStartupComponent;
 import org.thoughtcrime.securesms.mms.Slide;
 import org.thoughtcrime.securesms.mms.SlideDeck;
-import org.thoughtcrime.securesms.notifications.MarkReadReceiver;
+import org.thoughtcrime.securesms.notifications.MarkReadProcessor;
 import org.thoughtcrime.securesms.util.SharedConfigUtilsKt;
 
 import java.io.Closeable;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Provider;
@@ -153,9 +152,10 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
       SNIPPET_URI, ARCHIVED, STATUS, DELIVERY_RECEIPT_COUNT, EXPIRES_IN, LAST_SEEN, READ_RECEIPT_COUNT, IS_PINNED, SNIPPET_CONTENT,
   };
 
-  private static final List<String> TYPED_THREAD_PROJECTION = Stream.of(THREAD_PROJECTION)
-                                                                    .map(columnName -> TABLE_NAME + "." + columnName)
-                                                                    .toList();
+  private static final List<String> TYPED_THREAD_PROJECTION =
+            Arrays.stream(THREAD_PROJECTION)
+                    .map(columnName -> TABLE_NAME + "." + columnName)
+                    .collect(Collectors.toList());
 
   private static final List<String> COMBINED_THREAD_RECIPIENT_GROUP_PROJECTION =
           CollectionsKt.plus(
@@ -232,6 +232,7 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
   private final MutableSharedFlow<Long> updateNotifications = SharedFlowKt.MutableSharedFlow(0, 256, BufferOverflow.DROP_OLDEST);
   private final Json json;
   private final TextSecurePreferences prefs;
+  private final SnodeClock snodeClock;
 
   private final Lazy<@NonNull RecipientRepository> recipientRepository;
   private final Lazy<@NonNull MmsSmsDatabase> mmsSmsDatabase;
@@ -239,6 +240,7 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
   private final Lazy<@NonNull MessageNotifier> messageNotifier;
   private final Lazy<@NonNull MmsDatabase> mmsDatabase;
   private final Lazy<@NonNull SmsDatabase> smsDatabase;
+  private final Lazy<@NonNull MarkReadProcessor> markReadProcessor;
 
   @Inject
   public ThreadDatabase(@dagger.hilt.android.qualifiers.ApplicationContext Context context,
@@ -249,7 +251,9 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
                         Lazy<@NonNull MessageNotifier> messageNotifier,
                         Lazy<@NonNull MmsDatabase> mmsDatabase,
                         Lazy<@NonNull SmsDatabase> smsDatabase,
+                        Lazy<@NonNull MarkReadProcessor> markReadProcessor,
                         TextSecurePreferences prefs,
+                        SnodeClock snodeClock,
                         Json json) {
     super(context, databaseHelper);
     this.recipientRepository = recipientRepository;
@@ -258,6 +262,8 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
     this.messageNotifier = messageNotifier;
     this.mmsDatabase = mmsDatabase;
     this.smsDatabase = smsDatabase;
+    this.markReadProcessor = markReadProcessor;
+    this.snodeClock = snodeClock;
 
     this.json = json;
     this.prefs = prefs;
@@ -441,7 +447,7 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
     contentValues.put(UNREAD_MENTION_COUNT, 0);
 
     if (lastSeen) {
-      contentValues.put(LAST_SEEN, SnodeAPI.getNowWithOffset());
+      contentValues.put(LAST_SEEN, snodeClock.currentTimeMillis());
     }
 
     SQLiteDatabase db = getWritableDatabase();
@@ -487,22 +493,6 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
     for (Long threadId : dates.keySet()) {
       notifyThreadUpdated(threadId);
     }
-  }
-
-  public int getDistributionType(long threadId) {
-    SQLiteDatabase db     = getReadableDatabase();
-    Cursor         cursor = db.query(TABLE_NAME, new String[]{DISTRIBUTION_TYPE}, ID_WHERE, new String[]{String.valueOf(threadId)}, null, null, null);
-
-    try {
-      if (cursor != null && cursor.moveToNext()) {
-        return cursor.getInt(cursor.getColumnIndexOrThrow(DISTRIBUTION_TYPE));
-      }
-
-      return DistributionTypes.DEFAULT;
-    } finally {
-      if (cursor != null) cursor.close();
-    }
-
   }
 
   @NonNull
@@ -566,7 +556,7 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
     SQLiteDatabase db = getWritableDatabase();
 
     ContentValues contentValues = new ContentValues(1);
-    long lastSeenTime = timestamp == -1 ? SnodeAPI.getNowWithOffset() : timestamp;
+    long lastSeenTime = timestamp == -1 ? snodeClock.currentTimeMillis() : timestamp;
     contentValues.put(LAST_SEEN, lastSeenTime);
     db.beginTransaction();
     db.update(TABLE_NAME, contentValues, ID_WHERE, new String[] {String.valueOf(threadId)});
@@ -664,10 +654,6 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
     }
   }
 
-  public long getThreadIdIfExistsFor(Address address) {
-    return getThreadIdIfExistsFor(address.getAddress());
-  }
-
   public long getOrCreateThreadIdFor(Address address) {
     boolean created = false;
 
@@ -676,7 +662,7 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
     long threadId = getWritableDatabase().insertWithOnConflict(TABLE_NAME, null, contentValues, SQLiteDatabase.CONFLICT_IGNORE);
 
     if (threadId < 0) {
-      threadId = getThreadIdIfExistsFor(address);
+      threadId = getThreadIdIfExistsFor(address.getAddress());
     } else {
       created = true;
     }
@@ -768,7 +754,7 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
   public boolean markAllAsRead(long threadId, long lastSeenTime, boolean force, boolean updateNotifications) {
     if (mmsSmsDatabase.get().getConversationCount(threadId) <= 0 && !force) return false;
     List<MarkedMessageInfo> messages = setRead(threadId, lastSeenTime);
-    MarkReadReceiver.process(context, messages);
+    markReadProcessor.get().process(messages);
     if(updateNotifications) messageNotifier.get().updateNotification(context, threadId);
     return setLastSeen(threadId, lastSeenTime);
   }
@@ -882,7 +868,7 @@ public class ThreadDatabase extends Database implements OnAppStartupComponent {
       }
 
       final boolean isUnread = address instanceof Address.Conversable &&
-              configFactory.get().withUserConfigs(configs ->
+              ConfigFactoryProtocolKt.withUserConfigs(configFactory.get(), configs ->
                 SharedConfigUtilsKt.getConversationUnread(
                         configs.getConvoInfoVolatile(), (Address.Conversable) address));
 
